--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "page_analyzer"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+flask = "^2.3.2"
+gunicorn = "^21.2.0"
 
 
 [tool.poetry.scripts]
