--- a/env_vars.env
+++ b/env_vars.env
@@ -3,4 +3,4 @@
 SECRET_KEY=1d86d0bebae9032a6e4759798d0bfa53
 POETRY_VERSION=1.5.1
 PYTHON_VERSION=3.10.6
-DATABASE_URL=postgres://page_analyzer_sm2u_user:XbskxoQT7ZHCLu8BAL6qWrIwRT8DC6G8@dpg-cirdidtgkuvqadqogel0-a.oregon-postgres.render.com/page_analyzer_sm2u
+DATABASE_URL=postgres://page_analyzer_sm2u_user:XbskxoQT7ZHCLu8BAL6qWrIwRT8DC6G8@dpg-cirdidtgkuvqadqogel0-a/page_analyzer_sm2u
