feat: add handler for urls

--- a/env_vars.env
+++ b/env_vars.env
@@ -3,4 +3,4 @@
 SECRET_KEY=1d86d0bebae9032a6e4759798d0bfa53
 POETRY_VERSION=1.5.1
 PYTHON_VERSION=3.10.6
-DATABASE_URL=postgres://kirill:esCiUzF9X4l73RaYn74wrnBoKDl5BMNs@dpg-cjb28k9itvpc73ddob4g-a/page_analyzer_tx40
+DATABASE_URL=postgres://kirill:esCiUzF9X4l73RaYn74wrnBoKDl5BMNs@dpg-cjb28k9itvpc73ddob4g-a.frankfurt-postgres.render.com/page_analyzer_tx40
