--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.6"
 python-dotenv = "^1.0.0"
 validators = "^0.20.0"
 gunicorn = "^21.2.0"
+requests = "^2.31.0"
 
 
 [tool.poetry.scripts]
